--- a/notebook.Rmd
+++ b/notebook.Rmd
@@ -8,8 +8,7 @@ output:
 ### A primeira coisa a ser feita é carregar os dados em um DataFrame
 
 ```{r}
-data = read.csv(file = "data.csv", row.names = 1)
-data$weight.loss = data$initial.weight - data$final.weight 
+data = read.csv(file = "data.csv", row.names = 1, stringsAsFactors = TRUE)
 data
 
 ```
@@ -17,16 +16,17 @@ data
 ### Antes de executarmos o MRT, precisamos executar ANOVA. Iremos guardar o resultado a ANOVA em um novo dataframe
 
 ```{r}
-anova  = aov(weight.loss~diet.type,data=data)
-anova
+model<-lm(yeld~treatment, data)
+anova1  = anova(model)
+anova1
 ```
 
 ### Execução do MRT
 ```{r}
-library(DescTools)
-PostHocTest(anova, method = "duncan")
-#library(agricolae)
-#results <- duncan.test(anova,"Dieta",alpha=0.05,console=TRUE)
+#library(DescTools)
+#PostHocTest(anova1, method = "duncan")
+library(agricolae)
+duncan.test(anova1,"Dieta",alpha=0.05)
 #plot(results,horiz=TRUE,las=1)
 ```
 
